--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,17 @@ html {
 
 /* loader and */
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: rgb(29, 31, 35);
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(170, 0, 0, 0.553);
+  border-radius: 5px;
+}
+
 main {
   width: 100%;
 }
@@ -138,6 +149,7 @@ main .left_section_wrapper .left .left_navigation_fixed {
   height: 100vh;
   top: 0;
   box-shadow: 0px 0px 10px -4px black;
+  background-color: #212428;
 }
 
 .main .left_section_wrapper .left .avatar_wrapper {
