--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -410,6 +410,29 @@
   }
 }
 
+@media screen and (max-width: 550px) {
+  /* .left_section_wrapper .left {
+    width: 100%;
+    height: 80px;
+    display: contents;
+  }
+  main .left_section_wrapper .left .left_navigation_fixed {
+    width: 100%;
+    height: 80px;
+  }
+  main .left_section_wrapper .left .avatar_wrapper a img {
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
+  }
+  main .left_section_wrapper .left .nav_wrapper {
+    display: none;
+  }
+  main .left_section_wrapper .left .left_footer {
+    display: none;
+  } */
+}
+
 @media screen and (max-width: 515px) {
   .skills_container .skills_left,
   .skills_container .skills_right {
@@ -525,6 +548,16 @@
   .skills_title_videography {
     gap: 15px;
   }
+  .education_sertificate {
+    height: 355px;
+    width: 250px;
+  }
+  .academy_title h2 {
+    font-size: 18px;
+  }
+  .academy_title {
+    padding-left: 12px;
+  }
 }
 
 @media screen and (max-width: 380px) {
@@ -537,5 +570,9 @@
   .works_images .mobile_bg {
     width: 45px;
     height: 90px;
+  }
+  .education_sertificate {
+    height: 330px;
+    width: 225px;
   }
 }
