--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -411,7 +411,7 @@
 }
 
 @media screen and (max-width: 550px) {
-  /* .left_section_wrapper .left {
+  .left_section_wrapper .left {
     width: 100%;
     height: 80px;
     display: contents;
@@ -419,18 +419,76 @@
   main .left_section_wrapper .left .left_navigation_fixed {
     width: 100%;
     height: 80px;
+    z-index: 100;
   }
   main .left_section_wrapper .left .avatar_wrapper a img {
     width: 50px;
     height: 50px;
     margin-top: 10px;
+    margin-left: 15px;
   }
   main .left_section_wrapper .left .nav_wrapper {
-    display: none;
+    margin-top: 65vh;
+    position: relative;
+    display: flex;
+  }
+
+  main .left_section_wrapper .left .nav_wrapper nav {
+    padding: 15px 40px;
+    background-color: rgba(0, 0, 0, 0.774);
+    border-radius: 40px;
+  }
+
+  main .left_section_wrapper .left .nav_wrapper nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+  }
+  main .left_section_wrapper .left .nav_wrapper nav ul li {
+    border-radius: 50%;
+  }
+  main .left_section_wrapper .left .nav_wrapper nav ul li a {
+    padding: 7px;
+    opacity: 0.5;
+  }
+  main .left_section_wrapper .left .nav_wrapper nav ul li a i {
+    font-size: 15px;
   }
   main .left_section_wrapper .left .left_footer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0px;
+    padding: 0px;
+  }
+  main .left_section_wrapper .left .left_footer .social {
+    display: flex;
+    margin: 0px;
+  }
+  .social_hidden {
     display: none;
-  } */
+  }
+
+  main .left_section_wrapper .left .left_footer .social .social_icons {
+    position: absolute;
+    top: 28px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+  }
+  main .left_section_wrapper .left .left_footer .social .hr_line {
+    display: none;
+  }
+
+  .active {
+    background-color: #f4d03f;
+    background-image: linear-gradient(132deg, #f4d03f 0%, #16a085 100%);
+
+    color: white !important;
+    border-radius: 50%;
+    opacity: 1 !important;
+  }
 }
 
 @media screen and (max-width: 515px) {
