--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,13 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #212428;
+  /* background-color: #212428; */
+  background: rgb(2, 32, 15);
+  background: radial-gradient(
+    circle,
+    rgba(2, 32, 15, 1) 0%,
+    rgba(11, 60, 3, 1) 100%
+  );
 }
 html {
   scroll-behavior: smooth;
@@ -149,7 +155,12 @@ main .left_section_wrapper .left .left_navigation_fixed {
   height: 100vh;
   top: 0;
   box-shadow: 0px 0px 10px -4px black;
-  background-color: #212428;
+  background: rgb(2, 32, 15);
+  background: radial-gradient(
+    circle,
+    rgba(2, 32, 15, 1) 0%,
+    rgba(11, 60, 3, 1) 100%
+  );
 }
 
 .main .left_section_wrapper .left .avatar_wrapper {
@@ -254,9 +265,10 @@ main .right .skills_wrapper .content_and_line,
 main .right .portfolio_wrapper .content_and_line,
 main .right .education_wrapper .content_and_line {
   width: 100%;
+  height: 0px;
   padding-bottom: 50px;
   border-bottom: solid 1px #1d1e20;
-  box-shadow: 0px 10px 6px -13px var(--default-color);
+  box-shadow: 0px 10px 20px -13px black;
 }
 
 main .right .about_wrapper h1 {
@@ -605,7 +617,7 @@ main .right .about_wrapper div button:hover {
   height: 240px;
   margin-top: 40px;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px 1px rgba(69, 69, 69, 0.219);
+  box-shadow: 0px 0px 27px -7px black;
   display: grid;
   grid-template-columns: 1fr 1fr;
   place-items: center;
@@ -790,7 +802,7 @@ main .right .about_wrapper div button:hover {
 }
 
 .sertificate_img img:hover {
-  transform: scale(1.3);
+  transform: scale(1.1);
 }
 
 .contact_wrapper {
