--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -428,18 +428,15 @@
     margin-left: 15px;
   }
   main .left_section_wrapper .left .nav_wrapper {
-    margin-top: 75vh;
+    margin-top: 70vh;
     position: relative;
     display: flex;
-    width: 100%;
   }
 
   main .left_section_wrapper .left .nav_wrapper nav {
     padding: 15px 40px;
     background-color: rgba(0, 0, 0, 0.774);
     border-radius: 40px;
-    width: 70%;
-    margin: 0 auto;
   }
 
   main .left_section_wrapper .left .nav_wrapper nav ul {
@@ -454,6 +451,7 @@
   main .left_section_wrapper .left .nav_wrapper nav ul li a {
     padding: 7px;
     opacity: 0.5;
+    color: white;
   }
   main .left_section_wrapper .left .nav_wrapper nav ul li a i {
     font-size: 15px;
@@ -635,5 +633,21 @@
   .education_sertificate {
     height: 330px;
     width: 225px;
+  }
+}
+
+@media screen and (max-height: 521px) {
+  main .left_section_wrapper .left .nav_wrapper {
+    margin-top: 65vh;
+    position: relative;
+    display: flex;
+  }
+}
+
+@media screen and (max-height: 450px) {
+  main .left_section_wrapper .left .nav_wrapper {
+    margin-top: 60vh;
+    position: relative;
+    display: flex;
   }
 }
