--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -99,7 +99,7 @@
     height: 240px;
     margin-top: 40px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 1px rgba(69, 69, 69, 0.219);
+    box-shadow: 0px 0px 27px -7px black;
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
@@ -437,7 +437,7 @@
   main .left_section_wrapper .left .nav_mob_wrapper {
     position: relative;
     display: flex;
-    width: 100%;
+    width: 90%;
     visibility: hidden;
     opacity: 0;
     transition: 1.1s;
@@ -487,17 +487,19 @@
   main .left_section_wrapper .left .left_footer .social .social_icons {
     position: absolute;
     top: 28px;
-    right: 35%;
+    right: 38%;
     display: flex;
     align-items: center;
+    gap: 15px;
   }
   main .left_section_wrapper .left .left_footer .social .hr_line {
     display: none;
   }
 
   .active {
-    background-color: #f4d03f;
-    background-image: linear-gradient(132deg, #f4d03f 0%, #16a085 100%);
+    background: #fc466b;
+    background: -webkit-linear-gradient(to right, #3f5efb, #fc466b);
+    background: linear-gradient(to right, #3f5efb, #fc466b);
 
     color: white !important;
     border-radius: 50%;
@@ -667,5 +669,8 @@
   .education_sertificate {
     height: 330px;
     width: 225px;
+  }
+  main .left_section_wrapper .left .left_footer .social .social_icons {
+    right: 30%;
   }
 }
